9/16/2002
	- Support for NetWare's sys:/etc/resolv.cfg file.
	  (Scott Villinski <scott@villinski.com>)

9/5/2002
	- When looking for an rdataset in a zone or cache, seeing a CNAME
	  above the name is not an error.
	  (reported by Andrew Houghton <aah@volunteermatch.org>)

8/31/2002
	- Changed the code that dynamically loads record types; hopefully
	  this will solve some of the mysterious problems that I think
	  are related to non-English versions of Windows.
	- Clean up the Name code.

8/28/2002
	- Remove support for bitstring labels, since they're now deprecated.

8/16/2002
	- Address.isDottedQuad didn't check to see if the input String
	  contained characters after an IP address.
	  (Marcos Sanz <sanz@denic.de>)

8/11/2002
	- Querying for a nonexistant name with exactly one label didn't return.

8/10/2002
	- Add Ant build script (Blake Ramsdell <blake@brutesquadlabs.com>)

8/6/2002
	- The AAAARecord constructor was broken.
	- The Record class now implements Comparable.

6/22/2002
	- Significant speed improvements in the Record class and its
	  subclasses.

6/20/2002
	- Add Zone.removeRecord() (based on code from Adam Cassar
	  <adam.cassar@netregistry.com.au>)
	- Add Zone.toMasterFile() (based on code from Adam Cassar)
	- Performance enhancements to the Name object.
	- Add the "-t type" option to the lookup program.

6/16/2002
	- Update lots of code to use Collections instead of JDK 1.1
	  Vectors & Hashtables.

5/28/2002
	- fix some limitations of name parsing.
	  (reported by Tasos Kotsikonas <tasos@boldfish.com>)

5/4/2002
	- added the 'sleep' and 'date' commands to the update client.
	  (Olafur Gudmundsson <ogud@ogud.com>)

4/29/2002
	- 1.2.4 released

4/25/2002
	- Add a constructor for building a zone from an array of records.
	  (based on code from Adam Cassar <adam.cassar@netregistry.com.au>)

4/24/2002
	- Reduce the memory usage of the RRset class.
	- Add a new factory method for creating a Record from a
	  String, rather than a pre-tokenized String.